--- a/products.html
+++ b/products.html
@@ -41,7 +41,27 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="d-flex">
+                <!-- <form class="d-flex"> -->
+                    <!-- <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search For a product" id="search-input">
+                        <div class="input-group-append">
+                          <button class="btn btn-secondary" type="button">
+                            <i class="fa fa-search"></i>
+                          </button>
+                        </div>
+                      </div>
+                      <div id="search-results"></div>
+                        <div id="products-container">
+                        <div id="product-list-seafood" class="product-list"></div>
+                        <div id="product-list-vegetables" class="product-list" style="display: none;"></div>
+                        <div id="product-list-grains" class="product-list" style="display: none;"></div>
+                        <div id="product-list-snacks" class="product-list" style="display: none;"></div>
+                        <div id="product-list-dairy" class="product-list" style="display: none;"></div>
+                        <div id="product-list-instantfoods" class="product-list" style="display: none;"></div>
+                        <div id="product-list-beverages" class="product-list" style="display: none;"></div>
+                        <div id="product-list-oilsButters" class="product-list" style="display: none;"></div>
+                        <div id="product-list-hairProducts" class="product-list" style="display: none;"></div>
+                        </div> -->
                     <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
