--- a/Index.html
+++ b/Index.html
@@ -64,18 +64,18 @@
   <!-- Jumbotron -->
   <div class="bg-dark text-white py-5 bigb">
     <div class="container py-5 ">
-      <h1 class="h1 display-4 display-md-3 display-lg-1">
+      <h1 class="h1 display-4 display-md-3 display-lg-1 bigcc" style="font-size: 5rem; font-weight: 500;">
         Best products & <br />
         brands in our store
       </h1>
-      <p>
+      <p style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight: 500;">
         Trendy Products, Factory Prices, Excellent Service
       </p> 
       
-      <button type="button" class="btn btn-dark btn-lg">
+      <button type="button" class="btn btn-dark btn-lg " style="border-radius: 10px;">
       <a href="#About" style="text-decoration: none; color: #f5f5f5;"> Learn more</a>
       </button></a>
-      <button type="button"  class="btn btn-light shadow-0 text-dark pt-2 btn-lg" >
+      <button type="button"  class="btn btn-light shadow-0 text-dark pt-2 btn-lg" style="border-radius: 10px;">
         <a href="products.html" style="text-decoration: none; color: #1d1c1c;;"> <span class="pt-1">Purchase now</span></a>
         
       </button>
@@ -276,7 +276,21 @@
           <li class="nav-item" role="presentation">
               <button class="nav-link" id="snacks-tab" data-toggle="tab" data-target="#snacks" type="button" role="tab" aria-controls="snacks" aria-selected="false">Snacks and Sweets</button>
           </li>
-
+          <li class="nav-item" role="presentation">
+              <button class="nav-link" id="dairy-tab" data-toggle="tab" data-target="#dairy" type="button" role="tab" aria-controls="dairy" aria-selected="false">Dairy and tomato products</button>
+          </li>
+          <li class="nav-item" role="presentation">
+              <button class="nav-link" id="instantfoods-tab" data-toggle="tab" data-target="#instantfoods" type="button" role="tab" aria-controls="instantfoods" aria-selected="false">Instant foods and condiments</button>
+          </li>
+          <li class="nav-item" role="presentation">
+              <button class="nav-link" id="beverages-tab" data-toggle="tab" data-target="#beverages" type="button" role="tab" aria-controls="beverages" aria-selected="false">beverages</button>
+          </li>
+          <li class="nav-item" role="presentation">
+              <button class="nav-link" id="oilsButters-tab" data-toggle="tab" data-target="#oilsButters" type="button" role="tab" aria-controls="oilsButters" aria-selected="false">Oils and butter</button>
+          </li>
+          <li class="nav-item" role="presentation">
+              <button class="nav-link" id="hairProducts-tab" data-toggle="tab" data-target="#hairProducts" type="button" role="tab" aria-controls="hairProducts" aria-selected="false">Hair Products</button>
+          </li>
       </ul>
       <div class="tab-content" id="myTabContent0">
           <div class="tab-pane fade show active" id="seafood" role="tabpanel" aria-labelledby="seafood-tab">
@@ -291,7 +305,21 @@
           <div class="tab-pane fade" id="snacks" role="tabpanel" aria-labelledby="snacks-tab">
               <div id="product-list-snacks" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
           </div>
-
+          <div class="tab-pane fade" id="dairy" role="tabpanel" aria-labelledby="dairy-tab">
+              <div id="product-list-dairy" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+          </div>
+          <div class="tab-pane fade" id="instantfoods" role="tabpanel" aria-labelledby="instantfoods-tab">
+              <div id="product-list-instantfoods" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+          </div>
+          <div class="tab-pane fade" id="beverages" role="tabpanel" aria-labelledby="beverages-tab">
+              <div id="product-list-beverages" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+          </div>
+          <div class="tab-pane fade" id="oilsButters" role="tabpanel" aria-labelledby="oilsButters-tab">
+              <div id="product-list-oilsButters" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+          </div>
+          <div class="tab-pane fade" id="hairProducts" role="tabpanel" aria-labelledby="hairProducts-tab">
+              <div id="product-list-hairProducts" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"></div>
+          </div>
       </div>
       <nav>
           <ul class="pagination justify-content-center">
@@ -300,8 +328,6 @@
           </ul>
       </nav>
   </div>
-
-</section>
 
 <!-- Feature -->
 <section class="mt-5" style="background-color: #f5f5f5;" id="About">
