--- a/products.html
+++ b/products.html
@@ -62,12 +62,12 @@
                         <div id="product-list-oilsButters" class="product-list" style="display: none;"></div>
                         <div id="product-list-hairProducts" class="product-list" style="display: none;"></div>
                         </div> -->
-                    <button class="btn btn-outline-dark" type="submit">
+                    <!-- <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                     </button>
-                </form>
+                </form> -->
             </div>
         </div>
     </nav>
