--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,8 @@
     <link rel="stylesheet" href="bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
-    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
 </head>
 <body>
     <!--Main Navigation-->
@@ -44,9 +45,7 @@
                           <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="#!">All Products</a></li>
-                              <!-- <li><hr class="dropdown-divider" /></li>
-                              <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                              <li><a class="dropdown-item" href="#!">New Arrivals</a></li> -->
+
                           </ul>
                       </li>
                   </ul>
@@ -83,183 +82,7 @@
   </div>
   <!-- Jumbotron -->
 </header>
-<!-- Products -->
-<!-- <section>
 
-  <div class="container my-5">
-    <header class="mb-4">
-      <h3>Products</h3>
-    </header>
-
-    <ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button
-          data-mdb-tab-init
-          class="nav-link active"
-          id="home-tab0"
-          data-mdb-target="#home0"
-          type="button"
-          role="tab"
-          aria-controls="home"
-          aria-selected="true"
-        >
-         Seafood/Fish
-        </button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button
-          data-mdb-tab-init
-          class="nav-link"
-          id="profile-tab0"
-          data-mdb-target="#profile0"
-          type="button"
-          role="tab"
-          aria-controls="profile"
-          aria-selected="false"
-        >
-          Vegetables and spices
-        </button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button
-          data-mdb-tab-init
-          class="nav-link"
-          id="contact-tab0"
-          data-mdb-target="#contact0"
-          type="button"
-          role="tab"
-          aria-controls="contact"
-          aria-selected="false"
-        >
-          Grains and flours
-        </button>
-      </li>
-    </ul>
-    <div class="tab-content" id="myTabContent0">
-      <div
-        class="tab-pane fade show active"
-        id="home0"
-        role="tabpanel"
-        aria-labelledby="home-tab0"
-      >
-        Tab 1 content.
-      </div>
-      <div class="tab-pane fade" id="profile0" role="tabpanel" aria-labelledby="profile-tab0">
-        Tab 2 content
-      </div>
-      <div class="tab-pane fade" id="contact0" role="tabpanel" aria-labelledby="contact-tab0">
-        Tab 3 content
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/bongafish.jpeg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Boney/Bonga Fish/Eja Shawa</h5>
-            <p class="card-text">$22 for 5oz</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/crayfish.jpg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Roasted Crayfish</h5>
-            <p class="card-text">$00.00</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/bonga powder.jpg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Bonga Grounded Fish</h5>
-            <p class="card-text">$00.00</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/Okazi.jpg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Dried Okazi Leaves 50g</h5>
-            <p class="card-text">$120.00</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/Cameroonpepper.jpeg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Cameroon pepper</h5>
-            <p class="card-text">$790.50</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/nutmeg1.jpg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Tiger Nutmeg Powder 100g</h5>
-            <p class="card-text">$120.00</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/Lemongrass.jpg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Lemon grass</h5>
-            <p class="card-text">$99.50</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border icon-hover px-2 pt-2"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
-        <div class="card w-100 my-2 shadow-2-strong">
-          <img src="img/alligatorpepper.jpg" class="card-img-top" style="aspect-ratio: 1 / 1" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Alligator pepper</h5>
-            <p class="card-text">$120.00</p>
-            <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-<!-- Products -->
 
 <section class="py-5">
   <div class="container my-5">
@@ -454,8 +277,8 @@
 
       <div class="col-lg-8 mt-5 mt-lg-0">
         <form
-          action="forms/contact.php"
-          method="post"
+        action="https://formspree.io/f/mqazbwee"
+        method="POST"
           role="form"
           class="php-email-form"
         >
@@ -516,81 +339,8 @@
   </div>
 </section>
 <!-- End Contact Section -->
-<!-- Blog -->
-<!-- <section class="mt-5 mb-4">
-  <div class="container text-dark">
-    <header class="mb-4">
-      <h3>Blog posts</h3>
-    </header>
 
-    <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-        <article>
-          <a href="#" class="img-fluid">
-            <img class="rounded w-100" src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/posts/1.webp" style="object-fit: cover;" height="160" />
-          </a>
-          <div class="mt-2 text-muted small d-block mb-1">
-            <span>
-              <i class="fa fa-calendar-alt fa-sm"></i>
-              23.12.2022
-            </span>
-            <a href="#"><h6 class="text-dark">How to promote brands</h6></a>
-            <p>When you enter into any new area of science, you almost reach</p>
-          </div>
-        </article>
-      </div> -->
-      <!-- col.// -->
-      <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-        <article>
-          <a href="#" class="img-fluid">
-            <img class="rounded w-100" src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/posts/2.webp" style="object-fit: cover;" height="160" />
-          </a>
-          <div class="mt-2 text-muted small d-block mb-1">
-            <span>
-              <i class="fa fa-calendar-alt fa-sm"></i>
-              13.12.2022
-            </span>
-            <a href="#"><h6 class="text-dark">How we handle shipping</h6></a>
-            <p>When you enter into any new area of science, you almost reach</p>
-          </div>
-        </article>
-      </div> -->
-      <!-- col.// -->
-      <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-        <article>
-          <a href="#" class="img-fluid">
-            <img class="rounded w-100" src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/posts/3.webp" style="object-fit: cover;" height="160" />
-          </a>
-          <div class="mt-2 text-muted small d-block mb-1">
-            <span>
-              <i class="fa fa-calendar-alt fa-sm"></i>
-              25.11.2022
-            </span>
-            <a href="#"><h6 class="text-dark">How to promote brands</h6></a>
-            <p>When you enter into any new area of science, you almost reach</p>
-          </div>
-        </article>
-      </div> -->
-      <!-- col.// -->
-      <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-        <article>
-          <a href="#" class="img-fluid">
-            <img class="rounded w-100" src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/posts/4.webp" style="object-fit: cover;" height="160" />
-          </a>
-          <div class="mt-2 text-muted small d-block mb-1">
-            <span>
-              <i class="fa fa-calendar-alt fa-sm"></i>
-              03.09.2022
-            </span>
-            <a href="#"><h6 class="text-dark">Success story of sellers</h6></a>
-            <p>When you enter into any new area of science, you almost reach</p>
-          </div>
-        </article>
-      </div>
-    </div>
-  </div>
-</section> -->
-<!-- Blog -->
+
 
 <footer id="dk-footer" class="dk-footer">
   <div class="container">
@@ -616,16 +366,8 @@
                                   <i class="fa fa-twitter"></i>
                               </a>
                           </li>
-                          <li>
-                              <a href="#">
-                                  <i class="fa fa-google-plus"></i>
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">
-                                  <i class="fa fa-linkedin"></i>
-                              </a>
-                          </li>
+
+
                           <li>
                               <a href="#">
                                   <i class="fa fa-instagram"></i>
@@ -687,18 +429,14 @@
                               <li>
                                   <a href="#">Services</a>
                               </li>
-                              <li>
-                                  <a href="#">Projects</a>
-                              </li>
-                              <li>
-                                  <a href="#">Our Team</a>
-                              </li>
+
+
                           </ul>
                           <ul>
                               <li>
                                   <a href="#">Contact us</a>
                               </li>
-                              <li>
+                              <!-- <li>
                                   <a href="#">Blog</a>
                               </li>
                               <li>
@@ -706,7 +444,7 @@
                               </li>
                               <li>
                                   <a href="#">Faq</a>
-                              </li>
+                              </li> -->
                           </ul>
                       </div>
                       <!-- End Footer Widget -->
@@ -786,9 +524,27 @@
   </div>
   <!-- End Back to top -->
 </footer>
+<div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="contactModalLabel">Seller's Contact Details</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Email:</strong> buy@adeola4organics.com</p>
+        <p><strong>Phone:</strong> +61432429154</p>
+        <!-- Add any additional contact details here -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- Footer -->
 <!-- Footer -->
-    <!-- MDB -->
+  <!-- MDB -->
 
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Custom scripts -->
@@ -796,6 +552,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.20.0/js/mdb.min.js" integrity="sha512-XFd1m0eHgU1F05yOmuzEklFHtiacLVbtdBufAyZwFR0zfcq7vc6iJuxerGPyVFOXlPGgM8Uhem9gwzMI8SJ5uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="scripts.js"></script>
+
     
     <script type="text/javascript" src="js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/splide/4.0.7/splide.min.js"></script>
@@ -808,6 +565,7 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
