--- a/Index.html
+++ b/Index.html
@@ -264,7 +264,7 @@
           <div class="email">
             <i class="bi bi-envelope"></i>
             <h4>Email:</h4>
-            <p>buy@adeola4organics.com</p>
+            <p>ad.olaorganic@gmail.com</p>
           </div>
 
           <div class="phone">
@@ -532,7 +532,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p><strong>Email:</strong> buy@adeola4organics.com</p>
+        <p><strong>Email:</strong> ad.olaorganic@gmail.com</p>
         <p><strong>Phone:</strong> +61432429154</p>
         <!-- Add any additional contact details here -->
       </div>
