added new products and modifications

--- a/products.html
+++ b/products.html
@@ -86,11 +86,11 @@
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="beverages-tab" data-toggle="tab" data-target="#beverages" type="button" role="tab" aria-controls="beverages" aria-selected="false">beverages</button>
                 </li>
-                <li class="nav-item" role="presentation">
+                <!-- <li class="nav-item" role="presentation">
                     <button class="nav-link" id="oilsButters-tab" data-toggle="tab" data-target="#oilsButters" type="button" role="tab" aria-controls="oilsButters" aria-selected="false">Oils and butter</button>
-                </li>
+                </li> -->
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="hairProducts-tab" data-toggle="tab" data-target="#hairProducts" type="button" role="tab" aria-controls="hairProducts" aria-selected="false">Hair Products</button>
+                    <button class="nav-link" id="hairProducts-tab" data-toggle="tab" data-target="#hairProducts" type="button" role="tab" aria-controls="hairProducts" aria-selected="false">Hair and Beauty Products</button>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent0">
