--- a/Index.html
+++ b/Index.html
@@ -265,6 +265,7 @@
             <i class="bi bi-envelope"></i>
             <h4>Email:</h4>
             <p>customerservice@ad-ola.com</p>
+            <p>customerservice@ad-ola.com</p>
           </div>
 
           <div class="phone">
@@ -532,7 +533,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p><strong>Email:</strong> ad.olaorganic@gmail.com</p>
+        <p><strong>Email:</strong> ad.olaorganic@gmail.com  , customerservice@ad-ola.com</p>
+        
         <p><strong>Phone:</strong> +61432429154</p>
         <!-- Add any additional contact details here -->
       </div>
